--- a/pages/architecture/Architecture.module.scss
+++ b/pages/architecture/Architecture.module.scss
@@ -167,6 +167,7 @@
         height: 65px;
         padding: 10px;
         border-top: 1px solid black;
+        background-color: white;
 
         .footer_about__mobile_claim {
             padding-top: 5px;
