--- a/pages/lighting/Lighting.module.scss
+++ b/pages/lighting/Lighting.module.scss
@@ -172,6 +172,7 @@
       height: 65px;
       padding: 10px;
       border-top: 1px solid black;
+      background-color: $lighting-page-color;
 
       .footer_about__mobile_claim {
           padding-top: 5px;
